src/test/ui/const-generics/issue-61522-array-len-succ.min.stderr
error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/issue-61522-array-len-succ.rs:7:45
   |
LL | pub struct MyArray<const COUNT: usize>([u8; COUNT + 1]);
   |                                             ^^^^^ non-trivial anonymous constants must not depend on the parameter `COUNT`
   |
   = help: it is currently only allowed to use either `COUNT` or `{ COUNT }` as generic constants

error: generic parameters must not be used inside of non-trivial constant values
  --> $DIR/issue-61522-array-len-succ.rs:12:30
   |
LL |     fn inner(&self) -> &[u8; COUNT + 1] {
   |                              ^^^^^ non-trivial anonymous constants must not depend on the parameter `COUNT`
   |
   = help: it is currently only allowed to use either `COUNT` or `{ COUNT }` as generic constants

error: aborting due to 2 previous errors

